添加删除用户功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
+
+spring.thymeleaf.cache=false
