完成用户管理模块功能,完善进度条

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.mvc.view.prefix=classpath:/templates/
 spring.mvc.view.suffix=.html
 
 spring.thymeleaf.cache=false
+
+logging.level.com.three.mapper=debug
