--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.mvc.view.suffix=.html
 spring.thymeleaf.cache=false
 
 logging.level.com.three.mapper=debug
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
