修复人脸注册和登陆

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.thymeleaf.cache=false
 logging.level.com.three.mapper=debug
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
+
+server.max-http-header-size=10000000
+server.tomcat.max-http-form-post-size=20MB
+
+#server.port=443
+#server.ssl.key-store=3785916_ali.zyxytop.top.pfx
+#server.ssl.key-store-password=mRy60kue
