--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.servlet.multipart.max-request-size=20MB
 server.max-http-header-size=10000000
 server.tomcat.max-http-form-post-size=20MB
 
-#server.port=443
-#server.ssl.key-store=3785916_ali.zyxytop.top.pfx
-#server.ssl.key-store-password=mRy60kue
+server.port=443
+server.ssl.key-store=3785916_ali.zyxytop.top.pfx
+server.ssl.key-store-password=mRy60kue
